fixed header spacing

--- a/C/main.css
+++ b/C/main.css
@@ -145,7 +145,6 @@ nav a:hover{
 
 .pagetitle{
     text-align: center;
-    padding-left: 10%;
     background-color: yellow;
     margin-top:0;
 }
